--- a/templates/contact.html
+++ b/templates/contact.html
@@ -64,14 +64,14 @@
             <!--&lt;!&ndash;                            <h2 class="animated fadeInLeftBig">USA</h2>&ndash;&gt;-->
             <!--&lt;!&ndash;                            <p class="mb-2">2710, Media Center Dr, Bldg#6, Suite 120,</br> Los Angeles, CA 90065</p>&ndash;&gt;-->
             <!--&lt;!&ndash;                            <p class="mb-2">&ndash;&gt;-->
-            <!--&lt;!&ndash;                                <a href="mailto:info@affluencebusiness.com" class="text-white">info@affluencebusiness.com</a><br/>&ndash;&gt;-->
+            <!--&lt;!&ndash;                                <a href="mailto:steve@affluencebizdata.com" class="text-white">steve@affluencebizdata.com</a><br/>&ndash;&gt;-->
             <!--&lt;!&ndash;                                <p class="mb-2">307-213-7098</p>&ndash;&gt;-->
             <!--&lt;!&ndash;                        </div>&ndash;&gt;-->
             <!--                        <div class="col-9 mx-auto mt-4">-->
 
             <!--                            <h2 class="animated fadeInLeftBig"></h2>-->
             <!--&lt;!&ndash;                            <p class="mb-2">Level 39, Marina Bay, Financial Center Tower 2, </br>10 Marina Boulevard, Singapore-018983</p>&ndash;&gt;-->
-            <!--&lt;!&ndash;                            <p class="mb-2"><a href="mailto:info@affluencebusiness.com" class="text-white">info@affluencebusiness.com</a><br/>&ndash;&gt;-->
+            <!--&lt;!&ndash;                            <p class="mb-2"><a href="mailto:steve@affluencebizdata.com" class="text-white">steve@affluencebizdata.com</a><br/>&ndash;&gt;-->
             <!--&lt;!&ndash;                                <p class="mb-2">+65-9662-7237</p>&ndash;&gt;-->
             <!--                        </div>-->
             <!--                    </div>-->
