--- a/templates/data-cleansing.html
+++ b/templates/data-cleansing.html
@@ -428,7 +428,7 @@
                     <p style="text-align:Justify;">Our <strong>data cleaning services</strong> guarantee high operational efficiency and reduce costs spent correcting bad data. Furthermore, we utilize them to deliver top-quality data solutions. During our vigorous data cleaning and
                         data scrubbing services, we highlight vital information for our clients’ convenience.</p>
                     <p style="text-align:Justify;">What does all this accrue to you? Well, you invest in a competitive edge to overtake your competitors and rise above. Therefore, if you want your business to flourish, invest in Span Global Services’ <strong>data hygiene services</strong>                        and witness the power of clean insights.</p>
-                    <p style="text-align:Justify;">Get in touch with our data experts by emailing us at <a href="mailto:info@affluencebusiness.com"><strong>info@affluencebusiness.com</strong></a> or call us on <a href="tel:307-213-7098"><strong>307-213-7098</strong></a> to get
+                    <p style="text-align:Justify;">Get in touch with our data experts by emailing us at <a href="mailto:steve@affluencebizdata.com"><strong>steve@affluencebizdata.com</strong></a> or call us on <a href="tel:307-213-7098"><strong>307-213-7098</strong></a> to get
                         a free consultation today! </p>
                 </div>
             </div>
@@ -510,7 +510,7 @@
                                             <div class="card-body">
                                                 <p>We have got you covered at every step of the data discovery journey while we help you meet your <strong>B2B data cleansing</strong> needs. Call us at <a href="tel:307-213-7098">307-213-7098</a> for a
                                                     free one-on-one consultation or book your appointment for a free lead insights session <a href="https://calendly.com/spanglobal/schedule-a-call" title="Schedule A Call with Our Expert">Schedule A Call with Our Expert</a>.
-                                                    You can also email us at <a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a>.</p>
+                                                    You can also email us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>.</p>
                                             </div>
                                         </div>
                                     </div>
