--- a/templates/data-intelligence.html
+++ b/templates/data-intelligence.html
@@ -187,7 +187,7 @@
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <p>Span Global Services offers <strong>Data Intelligence solutions</strong> to keep data up-to-date for optimum campaign results. To help us manage your data with suitable data intelligence solutions, write
-                                                    to us at <a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a> or call on 877 837- 4884.</p>
+                                                    to us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a> or call on 877 837- 4884.</p>
                                             </div>
                                         </div>
                                     </div>
