--- a/templates/data-profiling.html
+++ b/templates/data-profiling.html
@@ -74,7 +74,7 @@
                         a certain amount of skill and expertise to ensure that it is understood and only then will the other allied processes work well. Our data specialists know the in and out of such formats to work with them more efficiently.</p>
                     <p
                         style="text-align:Justify;">The database is normalized to arrange records into one implement-targeted campaign to improve ROI. Find out how Span Global Services can help in profiling your database, connect with our experts at <strong>307-213-7098</strong> for
-                        a free one-on-one consultation, or email us at <a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a></p>
+                        a free one-on-one consultation, or email us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a></p>
                 </div>
                 <div class="col-lg-5 mb-4 wow fadeInRight">
                     <div class="mx-800">
@@ -171,7 +171,7 @@
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <p>Span Global Services is a pioneer in providing unmatched quality <strong>Data Profiling Services</strong>. It is not only cost-effective but offers top-notch services ensuring that multichannel campaigns
-                                                    gain momentum. You may get the <strong>best Data Profiling Service</strong> at unmatched prices by writing in to us at: info@affluencebusiness.com or you may call us on 307-213-7098..</p>
+                                                    gain momentum. You may get the <strong>best Data Profiling Service</strong> at unmatched prices by writing in to us at: steve@affluencebizdata.com or you may call us on 307-213-7098..</p>
                                             </div>
                                         </div>
                                     </div>
