--- a/templates/data-verification.html
+++ b/templates/data-verification.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <p>Keep your database fresh and make it a revenue generator. Find out how <strong>Span Global Services</strong> can help in ensuring the accuracy of your database, connect with our experts at <strong>307-213-7098</strong> for a free
-                        one-on-one consultation, or email us at <a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a></p>
+                        one-on-one consultation, or email us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a></p>
                 </div>
                 <div class="col-lg-5 mb-4 wow fadeInRight">
                     <div class="mx-800">
@@ -172,7 +172,7 @@
                                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                             <div class="card-body">
                                                 <p>Span Global Services provides impeccable <strong>data verification services</strong> to ensure that the database is scrupulous and B2B campaign ready. To avail <strong>data verification services</strong>,
-                                                    you may write to us at info@affluencebusiness.com or call on 877 837- 4884 for more details.</p>
+                                                    you may write to us at steve@affluencebizdata.com or call on 877 837- 4884 for more details.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                         </div>
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services offers data verification services where in the validity of the databases is checked, to help you maintain a good sender reputation. It offers tele-verification, <strong>email verification</strong>                                                    and social verification to ensure that your databases are 100% accurate and responsive. To avail <strong>data verification services</strong>, you may write to us at info@affluencebusiness.com or call
+                                                <p>Span Global Services offers data verification services where in the validity of the databases is checked, to help you maintain a good sender reputation. It offers tele-verification, <strong>email verification</strong>                                                    and social verification to ensure that your databases are 100% accurate and responsive. To avail <strong>data verification services</strong>, you may write to us at steve@affluencebizdata.com or call
                                                     on 877 837- 4884 for more details.</p>
                                             </div>
                                         </div>
