--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-8 mt-5 footer-links">
-                        <a href="/privacy/">Privacy Policy</a> <a href="/refund-policy/">Refund Policy</a>
+                        <a href="/privacy/">Privacy Policy</a> <a href="/refund-policy/">Replacement Policy</a>
                         <a href=""></a>
                         <a href=""></a>
 
@@ -23,7 +23,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
-                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
                         <p> </br><br /> <strong></strong><a href="tel:8777550023"></a> </p>
