--- a/templates/header.html
+++ b/templates/header.html
@@ -134,7 +134,7 @@
 <!--      <div class="top-right-contact">-->
 <!--        <span class="top-phone">-->
 <!--          <a href="tel:307-213-7098" class="big-text">307-213-7098</a>-->
-<!--          <a href="mailto:info@affluencebusiness.com" class="small-text">info@affluencebusiness.com </a>-->
+<!--          <a href="mailto:steve@affluencebizdata.com" class="small-text">steve@affluencebizdata.com </a>-->
 <!--        </span>-->
 <!--      </div>-->
 
