--- a/templates/healthcare-lists/hospital-email-list.html
+++ b/templates/healthcare-lists/hospital-email-list.html
@@ -514,8 +514,8 @@
                         existing customers data to keep it deliverable and active. Launch data-driven campaigns and reap
                         benefits. </p>
                     <p style="text-align: justify;">For detailed data and count requests contact us by email at:<a
-                            href="mailto:info@spanglobalservices.com"
-                            title="Email Span Global Services">info@spanglobalservices.com </a></p>
+                            href="mailto:info@affluencebusiness"
+                            title="Email Span Global Services">info@affluencebusiness </a></p>
                     <div class="mb-5 mt-4"> <a href="/contact-us"
                             class="green-btn circle-fa">BUY DATABASE NOW &nbsp; <i
                                 class="fa icon ion-android-arrow-forward"></i></a> </div>
