--- a/templates/professional-lists/ceo-email-list.html
+++ b/templates/professional-lists/ceo-email-list.html
@@ -255,7 +255,7 @@
                                             <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
                                                 <div class="card-body">
                                                     <p>The most efficient way to get your <strong>CEO Mailing List</strong> is to buy one from Span Global Services. We offer customized, cost-efficient email lists to suit your specific business needs. Just
-                                                        browse through our website and choose the ‘<a href="/contact-us" title="Buy Now">Buy Now</a>’ option or drop a mail at <a href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a>                                                        to discuss your requirements.</p>
+                                                        browse through our website and choose the ‘<a href="/contact-us" title="Buy Now">Buy Now</a>’ option or drop a mail at <a href="mailto:info@affluencebusiness">info@affluencebusiness</a>                                                        to discuss your requirements.</p>
                                                 </div>
                                             </div>
                                         </div>
