--- a/templates/technology-lists/amazon-web-services-users-list.html
+++ b/templates/technology-lists/amazon-web-services-users-list.html
@@ -658,7 +658,7 @@ var svgMapDataGPD = {
                             </div>
                             <div id="collapseseven" class="collapse" aria-labelledby="headingseven" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <p align="justify">The easiest way to purchase Amazon web services client lists is by clicking on the <strong>“<a href="/request-quote" title="Request A Sample Now">Request A Sample Now”</a></strong> option. For further details you may reach us on (877) 755-0023 or write in to us at <a href="mailto:info@spanglobalservices.com">info@spanglobalservices.com</a>.</p>
+                                    <p align="justify">The easiest way to purchase Amazon web services client lists is by clicking on the <strong>“<a href="/request-quote" title="Request A Sample Now">Request A Sample Now”</a></strong> option. For further details you may reach us on (877) 755-0023 or write in to us at <a href="mailto:info@affluencebusiness">info@affluencebusiness</a>.</p>
                                 </div>
                             </div>
                         </div>
